实现角色的增、删、改、查接口
